Roottask linkbase fix

--- a/config.mk.in
+++ b/config.mk.in
@@ -60,12 +60,12 @@ LD=		$(TOOLPREFIX)ld
 RMDIR=		rmdir
 LN_S=		@LN_S@
 AUTOCONF=	autoconf
-MKDIRHIER=	$(top_srcdir)/tools/mkdirhier
 AWK=		@AWK@
-IDL4=		@idl4dir@/bin/idl4
+IDL4=		@IDL4DIR@/bin/idl4
 
 INSTALL=	@INSTALL@
 INSTALL_PROGRAM=@INSTALL_PROGRAM@
 INSTALL_DATA=	@INSTALL_DATA@
 INSTALL_SCRIPT=	@INSTALL_SCRIPT@
 
+ROOTTASK_LINKBASE=	@ROOTTASK_LINKBASE@
