Add real dependencies (Thx to Sascha Friedmann)

--- a/config.mk.in
+++ b/config.mk.in
@@ -50,6 +50,7 @@ CFLAGS=		@CFLAGS@
 CXXFLAGS=	@CXXFLAGS@
 LDFLAGS=	@LDFLAGS@
 CPPFLAGS=	@CPPFLAGS@
+IDL4INCLUDES=   @IDL4INCLUDES@
 IDL4FLAGS=      @IDL4FLAGS@ 
 LGCC=		-lgcc
 
